# cw_6_sky_pro_1-part

./: pyproject.toml
config/: settings.py  urls.py
newsletters/: admin.py  apps.py  models.py  services.py  urls.py  views.py
newsletters/migrations/: 0001_initial.py  0002_mailing_clients.py
newsletters/templates/newsletters/: base.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
newsletters/templates/newsletters/includes/: inc_menu.html
